<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/sfondoNero"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_list_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/edit_list_name"
        android:layout_width="378dp"
        android:layout_height="58dp"
        android:autofillHints="text"
        android:background="@drawable/edittext_border"
        android:hint="@string/new_list_name"
        android:inputType="textCapSentences"
        android:maxLength="30"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        />

    <EditText
        android:id="@+id/edit_list_description"
        android:layout_width="378dp"
        android:layout_height="58dp"
        android:autofillHints="text"
        android:hint="@string/new_list_description"
        android:inputType="textMultiLine"
        android:maxLines="3"
        android:layout_marginTop="8dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:background="@drawable/edittext_border"
        />

</LinearLayout>