<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:layout_marginBottom="4dp">

    <ImageView
        android:id="@+id/listPoster"
        android:layout_width="129dp"
        android:layout_height="74dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/list_poster"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:src="@drawable/placeholder_list_default_icon"/>

    <TextView
        android:id="@+id/listTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_title"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/listPoster"
        app:layout_constraintTop_toTopOf="@+id/listPoster"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/listElemNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_elem_number"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/listPoster"
        app:layout_constraintTop_toBottomOf="@+id/listTitle"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>