<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sfondoNero"
    tools:context=".Activities.RegisterActivity">

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="151dp"
        android:layout_height="138dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="262dp"
        android:layout_height="58dp"
        android:autofillHints="username"
        android:hint="@string/username"
        android:background="@drawable/edittext_border"
        android:inputType="text"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/Logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="262dp"
        android:layout_height="58dp"
        android:layout_marginTop="68dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edittext_border"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Username" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="262dp"
        android:layout_height="58dp"
        android:layout_marginTop="68dp"
        android:autofillHints="password"
        android:background="@drawable/edittext_border"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Email" />

    <TextView
        android:id="@+id/UsernameError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/Username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/PasswordError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/Password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/EmailError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/Email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/btnRegistrati"
        android:layout_width="170dp"
        android:layout_height="49dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/bottoni_accesso"
        android:text="@string/registrati"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Password"
        />

    <TextView
        android:id="@+id/Accedi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"

        app:layout_constraintTop_toBottomOf="@id/btnRegistrati"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>